--- a/src/app/templates/vote.html
+++ b/src/app/templates/vote.html
@@ -107,7 +107,7 @@ $(document).ready(function() {
 </form>
 
 <h2>2. Stimme ab!</h2>
-<p>Du hast 2 Stimmen. Du kannst nicht beide Stimmen für die selbe Person verwenden. Du musst nicht beide Stimmen abgeben.</p>
+<p>Du hast 2 Stimmen. Du kannst nicht beide Stimmen für die selbe Person verwenden. Du musst nicht beide Stimmen abgeben. Du kannst deine Wahl nach Abgabe nicht verändern.</p>
 <form id="vote">
     <table class="table table-hover">
       <thead>
