--- a/src/app/templates/vote.html
+++ b/src/app/templates/vote.html
@@ -94,7 +94,7 @@ $(document).ready(function() {
 
 
 <h2>1. Verifiziere deinen Prüfschlüssel</h2>
-<p>Gib den Prüfschlüssel an, die dir per Mail zugeschickt wurde.</p>
+<p>Gib den Prüfschlüssel an, der dir per Mail zugeschickt wurde.</p>
 <form id="passphrase" class="pb-4 needs-validation" novalidate autocomplete="off">
   <div class="mb-3">
     <input type="email" class="form-control" id="passphrase_input" placeholder="Prüfschlüssel" required>
